--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "taquito-boilerplate-react",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@taquito/beacon-wallet": "^14.0.0",
     "@taquito/taquito": "^14.0.0",
