--- a/client/package.json
+++ b/client/package.json
@@ -2,10 +2,8 @@
   "name": "taquito-boilerplate-react",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
+  "proxy": "http://127.0.0.1:5000",
   "dependencies": {
-    "@taquito/beacon-wallet": "^14.0.0",
-    "@taquito/taquito": "^14.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
@@ -14,7 +12,6 @@
     "@types/node": "^18.11.7",
     "@types/react": "^18.0.23",
     "@types/react-dom": "^18.0.7",
-    "axios": "^1.4.0",
     "buffer": "^6.0.3",
     "qrcode-generator": "^1.4.4",
     "react": "^18.2.0",
@@ -30,8 +27,7 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject",
-    "update-taquito": "ncu -u --target newest --filter '/^@taquito.*$/' && npm i"
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": "react-app"
