--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Paint NFT",
-  "name": "Paint NFT",
+  "short_name": "Phishing Detector",
+  "name": "Phishing Detector",
   "icons": [],
   "start_url": ".",
   "display": "standalone",
