--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "taquito-boilerplate-react",
+  "name": "phishing-detector-react",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://127.0.0.1:5000",
