--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.12.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4"
@@ -46,6 +47,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
+    "@types/react-modal": "^3.16.0",
     "autoprefixer": "^10.4.14",
     "daisyui": "^3.0.3",
     "os-browserify": "^0.3.0",
